tests/ui/invalid-return-type.stderr
error: wrap_match currently only supports functions that return Results
 --> tests/ui/invalid-return-type.rs:4:29
  |
4 | fn invalid_return_type() -> Option<()> {
  |                             ^^^^^^
